add toonstats